--- a/Angular/src/app/pages/ticket-management/ticket-management.component.css
+++ b/Angular/src/app/pages/ticket-management/ticket-management.component.css
@@ -12,7 +12,7 @@
 
 .ultra-top-header {
   height: 7%;
-  background: linear-gradient(90deg, #2196F3, #9C27B0);
+  background: linear-gradient(90deg, #258630, #057da5);
   border-radius: 12px 12px 0 0;
 }
 
